<resources>
    <string name="app_name">Kolega Hotel</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirmation">Confirm Password</string>
    <string name="prompt_name">Name</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Username must be 4 characters or more</string>
    <string name="invalid_password">Password must be 8 characters or more</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="invalid_password_confirmation">Password confirmation did not match</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="full_name">Full Name</string>
    <string name="social_media">Social Media</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">SAVE</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="profile">Profile</string>

    <string name="edit_profile">edit profile</string>
    <string name="about">About</string>
    <string name="gender">Gender</string>
    <string name="education">Education</string>
    <string name="address">Address</string>
    <string name="contact">Contact</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="social">Social</string>
    <string name="preferred_positions">Preferred Positions</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="latest_education">Latest Education</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <string-array name="education_arrays">
        <item>Elementary School</item>
        <item>Middle School</item>
        <item>High School</item>
        <item>Diploma</item>
        <item>Bachelor</item>
        <item>Master</item>
        <item>Doctorate</item>
    </string-array>

    <string name="finish_before">Finish before</string>
    <string name="title_activity_job_detail">JobDetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="transition_1">transition 1</string>
    <string name="area">Area</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="wage">Wage</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="description">Description</string>

    <string name="left">left</string>
    <string name="cancel_job">Cancel Job</string>
    <string name="ktp">KTP <font color='red'>*</font></string>
    <string name="skck">SKCK <font color='red'>*</font></string>
    <string name="kartu_garda_pratama">Kartu Garda Pratama</string>
    <string name="sertifikat_uji_kompetensi">Sertifikat Uji Kompetensi</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="pending_image">Pending image</string>
    <string name="wait_for_verification_please_contact_number_below_to_ask_for_verification">Wait for verification. Please contact number below to ask for verification.</string>
    <string name="complete">Complete</string>
    <string name="job_image">Job image</string>
    <string name="apply_job">Apply Job</string>
    <string name="person_image">Person image</string>
    <string name="logo">logo</string>
    <string name="cover_placeholder">Cover placeholder</string>
    <string name="birthday">Birthday</string>
    <string name="there_is_nothing_here">There is nothing here</string>
    <string name="apply_to_jobs_and_track_your_applications_from_dashboard">Apply to jobs and track your applications from dashboard</string>
    <string name="find_job">Find job</string>
    <string name="congratulation">Congratulation!</string>
    <string name="you_have_finished_your_job_let_s_find_another_job_that_suits_you">You have finished your job. Let\'s find another job that suits you.</string>
    <string name="find_new_job">find new job</string>
    <string name="active_jobs">Active Jobs</string>
    <string name="see_more">See More</string>
    <string name="accepted_jobs">Accepted Jobs</string>
    <string name="pending_jobs">Pending Jobs</string>
    <string name="jobs_history">Jobs History</string>
    <string name="height_weight">Height / Weight</string>
    <string name="documents">Documents</string>
    <string name="loading">Loading…</string>
    <string name="to_do_list">To Do List</string>
    <string name="you_re_offline">You\'re offline</string>
    <string name="swipe_down_to_reload_when_you_are_already_online">Swipe down to reload when you are already online</string>
    <string name="almost_done">Almost done</string>
    <string name="your_job_is_verified_please_contact_number_below_if_you_haven_t_been_paid">Your job is verified. Please contact number below if you haven\'t been paid.</string>
    <string name="i_have_received_payment">i have received payment</string>
</resources>
