<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ui.profile.update.UpdateProfileActivity"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/update_photo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_name"
            android:text="@string/name"
            app:layout_constraintTop_toBottomOf="@id/update_photo"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_update_name"
            app:layout_constraintTop_toBottomOf="@id/update_name"
            app:layout_constraintLeft_toLeftOf="@id/update_name"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_full_name"
            android:text="@string/full_name"
            app:layout_constraintTop_toBottomOf="@id/edit_update_name"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_update_full_name"
            app:layout_constraintTop_toBottomOf="@id/update_full_name"
            app:layout_constraintLeft_toLeftOf="@id/update_name"
            android:inputType="textCapWords"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_address"
            android:text="@string/address"
            app:layout_constraintTop_toBottomOf="@id/edit_update_full_name"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_update_address"
            app:layout_constraintTop_toBottomOf="@id/update_address"
            app:layout_constraintLeft_toLeftOf="@id/update_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_social_media"
            android:text="@string/social_media"
            app:layout_constraintTop_toBottomOf="@id/edit_update_address"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_update_social_media"
            app:layout_constraintTop_toBottomOf="@id/update_social_media"
            app:layout_constraintLeft_toLeftOf="@id/update_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_phone_number"
            android:text="@string/phone_number"
            app:layout_constraintTop_toBottomOf="@id/edit_update_social_media"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_update_phone_number"
            android:inputType="phone"
            app:layout_constraintTop_toBottomOf="@id/update_phone_number"
            app:layout_constraintLeft_toLeftOf="@id/update_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_gender"
            android:text="@string/gender"
            app:layout_constraintTop_toBottomOf="@id/edit_update_phone_number"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/radio_update_gender"
            app:layout_constraintTop_toBottomOf="@id/update_gender">
            <RadioButton android:id="@+id/update_gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/update_gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/update_latest_education"
            android:text="@string/latest_education"
            app:layout_constraintTop_toBottomOf="@id/radio_update_gender"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>
        
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_update_latest_education"
            android:entries="@array/education_arrays"
            app:layout_constraintTop_toBottomOf="@id/update_latest_education"
            app:layout_constraintLeft_toLeftOf="parent"
            android:prompt="@string/latest_education"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save_profile"
            android:text="@string/save"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/spinner_update_latest_education"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="32dp"
            android:background="@drawable/custom_button"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>